syntax = "proto3";

package sample;

// ユーザーの情報を取得、追加、更新するためのサービス定義
service UserService {
  // IDに基づいてユーザーの情報を取得
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

// ユーザー情報を取得するリクエスト
message GetUserRequest {
  int32 id = 1;             // 取得したいユーザーのID
}

// 取得したユーザーの情報
message GetUserResponse {
  int32 id = 1;             // ユーザーの一意のID
  string name = 2;          // ユーザーの名前
  string email = 3;         // ユーザーのメールアドレス
}
